# examen-dvc

./: .gitignore  dvc.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
src/data/: normalization_data.py  split_data.py
src/models/: eval.py  gridsearch.py  params.yaml  train.py
