[project]
name = "examen-dvc"
version = "0.1.0"
description = "DVC Exam: Liora"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.66.1",
    "dvc-s3>=3.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
